[project]
name = 'ghit-smartptr'
description = 'ghit'
readme = 'README.md'
requires-python = '>=3.9,<4.0'
dynamic = ['version']
classifiers = [
    'Programming Language :: Python :: 3',
    'License :: OSI Approved :: MIT License',
    'Operating System :: OS Independent'
]
authors = [
    { name='Michaël Petrov', email='smartptr@gmail.com' },
]
dependencies = ['pygit2', 'requests']
optional-dependencies = {testing=['pygit2', 'requests', 'pytest']}
license = { file = "LICENSE" }

[project.urls]
Homepage = 'https://github.com/0x656b694d/ghit'
Issues = 'https://github.com/0x656b694d/ghit/issues'

[tool.hatch]
version = {attr = 'ghit.__version__', path = 'src/ghit/__init__.py'}

[tool.hatch.build.targets.wheel]
packages = ['src/ghit']

[build-system]
requires = ['hatchling']
build-backend = 'hatchling.build'

[tool.ruff]
line-length = 120
target-version = 'py39'

[tool.ruff.lint]
select = ['E', 'F', 'W', 'I', 'YTT', 'FA', 'ISC', 'ICN', 'G', 'C90', 'N', 'UP', 'S', 'B', 'C4', 'DTZ', 'DJ', 'PIE', 'T20', 'PT', 'Q', 'RSE', 'RET', 'SIM', 'TID', 'TCH', 'INT', 'PTH', 'PL']
flake8-quotes.inline-quotes = 'single'
per-file-ignores.'*/tests/*' = ['S101']
pylint.max-args = 8

[tool.black]
line-length = 120
target-version = ['py39']
skip-string-normalization = true

[project.scripts]
ghit = 'ghit.__main__:main'
