[metadata]
name = ghit-smartptr
version = 0.0.6
author = Michaël Petrov
author_email = smartptr@gmail.com
description = ghit
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/0x656b694d/ghit
project_urls =
    Bug Tracker = https://github.com/0x656b694d/ghit/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
license_files = LICENSE

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9,<4
install_requires =
    pygit2
    requests

[options.extras_require]
testing =
    pygit2
    requests

[options.entry_points]
console_scripts =
    ghit = ghit.__main__:main

[options.packages.find]
where = src
